2004-01-01  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_sm.erl (do_route/3): Minor fix

	* src/ejabberd_sm.erl (route_message/3): Minor changes

2003-12-28  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_app.erl: Now possible to specify path to log file
	via "EJABBERD_LOG_PATH" environment variable

	* src/translate.erl: Now possible to specify path to "msgs"
	directory via "EJABBERD_MSGS_PATH" environment variable

	* src/ejabberd.erl: Added get_so_path/0 function
	* src/ejabberd_app.erl: Use ejabberd:get_so_path/0 to load .so
	* src/mod_irc/iconv.erl: Likewise
	* src/stringprep/stringprep.erl: Likewise

2003-12-24  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Presence probe now sended from full JID

	* src/mod_roster.erl: Bugfix

2003-12-23  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Bugfix

2003-12-21  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_roster.erl: Added workaround for legacy gateways
	(passing of "subscribed" presence)

	* src/ejabberd_sm.erl: Minor fix in subscription processing

2003-12-17  Alexey Shchepin  <alexey@sevcom.net>

	* src/jlib.hrl: Added declaration of "iq" record
	* (all): Updated to use "iq" record

2003-12-14  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_local.erl: Replaced register_local_route to
	register_route
	* src/ejabberd_service.erl: Likewise
	* src/mod_echo.erl: Likewise
	* src/mod_vcard.erl: Likewise

	* src/ejabberd_router.erl: Partially rewrited
	* src/ejabberd_sm.erl: Likewise

2003-12-13  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s.erl: Partially rewrited

	* src/mod_roster.erl: Removed debugging code

2003-12-12  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s_out.erl: Bugfix

2003-12-11  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_roster.erl: Updated subscription handling to latest
	XMPP-IM draft

2003-12-06  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s_in.erl: Changed timeout processing, bugfix
