@@ -1,3 +1,7 @@
+2004-01-03  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/ejabberd_router.erl (do_route/3): Slightly changed behaviour
+
 2004-01-01  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/ejabberd_sm.erl (do_route/3): Minor fix
